--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shethink/email-sequence-components",
-  "version": "1.0.1",
+  "version": "1.0.9",
   "main": "dist/index.js",
   "src": "src/index.ts",
   "module": "dist/esm/index.js",
@@ -12,8 +12,7 @@
     "workbench": "styleguidist server --config styleguide.config.cjs",
     "workbench:build": "styleguidist build --config styleguide.config.cjs"
   },
-  "author": "sourcebae",
-  "license": "MIT",
+  "license": "UNLICENSED",
   "files": [
     "dist/",
     "package.json"
@@ -50,6 +49,11 @@
     }
   },
   "exports": {
+    ".": {
+      "require": "./dist/index.js",
+      "import": "./dist/esm/index.js",
+      "types": "./dist/index.d.ts"
+    },
     "./theme-provider": {
       "require": "./dist/theme-provider/index.js",
       "import": "./dist/esm/theme-provider/index.js",
@@ -109,8 +113,12 @@
     "react-select": "^5.7.4"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.22.10",
+    "@babel/core": "^7.22.9",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-runtime": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
     "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-node-resolve": "^15.2.1",
     "@rollup/plugin-typescript": "^11.1.3",
@@ -122,6 +130,8 @@
     "@types/react-dom": "^18.2.7",
     "@types/react-is": "^18.2.1",
     "babel-loader": "^9.1.3",
+    "babel-plugin-react-remove-properties": "^0.3.0",
+    "babel-preset-minify": "^0.5.2",
     "file-loader": "^6.2.0",
     "react": "^18.2.0",
     "react-docgen-typescript": "^2.2.2",
@@ -134,7 +144,8 @@
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.1.6",
     "url-loader": "^4.1.1",
-    "webpack": "^5.88.2"
+    "webpack": "^5.88.1",
+    "yalc": "^1.0.0-pre.53"
   },
   "peerDependencies": {
     "@emotion/react": "^11.10.8",
@@ -146,14 +157,5 @@
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
   },
-  "sideEffects": false,
-  "repository": {
-    "type": "git",
-    "url": "git+https://Anukr98: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@github.com/Shethink/email-sequence-components.git"
-  },
-  "bugs": {
-    "url": "https://github.com/Shethink/email-sequence-components/issues"
-  },
-  "homepage": "https://github.com/Shethink/email-sequence-components#readme",
-  "description": ""
+  "sideEffects": false
 }
