--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
         "declaration": true,
         "esModuleInterop": true,
         "noEmit": false,
-        "skipDefaultLibCheck": true,
+        "skipLibCheck": true,
         "strict": true,
         "resolveJsonModule": true,
         "target": "ESNext",
