add custom style to checkbox

--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
       "create-sequence": [
         "./dist/create-sequence/index.d.ts"
       ],
+      "checkbox": [
+        "./dist/checkbox/index.d.ts"
+      ],
       "icon": [
         "./dist/icon/index.d.ts"
       ],
@@ -93,6 +96,11 @@
       "require": "./dist/select/index.js",
       "import": "./dist/esm/select/index.js",
       "types": "./dist/select/index.d.ts"
+    },
+    "./checkbox": {
+      "require": "./dist/checkbox/index.js",
+      "import": "./dist/esm/checkbox/index.js",
+      "types": "./dist/checkbox/index.d.ts"
     },
     "./text-field": {
       "require": "./dist/text-field/index.js",
