add switch button

--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
       "button": [
         "./dist/button/index.d.ts"
       ],
+      "switch-button": [
+        "./dist/switch-button/index.d.ts"
+      ],
       "create-sequence": [
         "./dist/create-sequence/index.d.ts"
       ],
@@ -101,6 +104,11 @@
       "require": "./dist/checkbox/index.js",
       "import": "./dist/esm/checkbox/index.js",
       "types": "./dist/checkbox/index.d.ts"
+    },
+    "./switch-button": {
+      "require": "./dist/switch-button/index.js",
+      "import": "./dist/esm/switch-button/index.js",
+      "types": "./dist/switch-button/index.d.ts"
     },
     "./text-field": {
       "require": "./dist/text-field/index.js",
